# Takuzu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_ext.c  game_ext.h  game_private.c  game_private.h  game_sdl.c  game_solve.c  game_struct.h  game_test_cebarrat.c  game_test_tcohen.c  game_test_thmoreau.c  game_text.c  game_tools.c  game_tools.h  model.c  model.h  queue.c
tests files/: 4x4_0solution.txt  4x6.txt  8x4.txt  solution.txt
web/: canva.js  demo.html  takuzu.html  takuzuStyle.css  wrapper.c
web/src/: game_private.c  game_private.h
